# YT-AI-Platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
services/ai-orchestrator/: .env.example  README.md  pyproject.toml
services/ai-orchestrator/app/: __init__.py  main.py  orchestrator.py
services/ai-orchestrator/app/agent/: __init__.py  runtime.py  schemas.py  validator.py
services/ai-orchestrator/app/api/: __init__.py
services/ai-orchestrator/app/cache/: __init__.py  client.py  keys.py
services/ai-orchestrator/app/core/: config.py  logging.py
services/ai-orchestrator/app/evidence/: __init__.py  chain.py  validator.py
services/ai-orchestrator/app/experiments/: __init__.py  client.py
services/ai-orchestrator/app/feedback/: __init__.py  client.py
services/ai-orchestrator/app/guardrails/: __init__.py  cultural.py  evidence_gate.py  evidence_gate_v2.py  evidence_gate_v3.py  intent_classifier.py  intent_classifier_v2.py  policy_loader.py
services/ai-orchestrator/app/integrations/: __init__.py  llm.py
services/ai-orchestrator/app/llm/: __init__.py  baidu.py  base.py  factory.py
services/ai-orchestrator/app/mcp/: __init__.py  protocol.py  schemas.py  tool_client.py
services/ai-orchestrator/app/memory/: __init__.py  redis_memory.py  session.py
services/ai-orchestrator/app/prompts/: builder.py
services/ai-orchestrator/app/providers/: __init__.py
services/ai-orchestrator/app/retrieval/: knowledge.py
services/ai-orchestrator/app/tools/: __init__.py  client.py  release_client.py  resilient_client.py  schemas.py
services/ai-orchestrator/docs/: agent-runtime-guide.md  e2e-guide.md  evidence-gate-guide.md  evidence-gate-policy-guide.md  llm-intent-classifier-guide.md  llm-provider-guide.md  reliability-guide.md  session-memory-guide.md  session-npc-isolation-guide.md
services/ai-orchestrator/tests/: __init__.py  intent_cases.json  redteam_cases.json  test_cache_performance.py  test_evidence_gate_policy.py  test_guardrails.py  test_intent_classifier_v2.py  test_llm_provider.py  test_redteam.py
services/core-backend/: README.md  alembic.ini  pyproject.toml
services/core-backend/alembic/: env.py
services/core-backend/alembic/versions/: 001_initial_schema.py  001_v0_1_0_initial_schema.py  002_add_analytics_events.py  003_add_npc_prompts.py  004_add_pg_trgm_indexes.py  005_add_feedback_fields.py  006_add_vector_sync_fields.py  007_add_embedding_usage.py  008_add_feedback_workflow_fields.py  009_add_experiments.py  010_add_trace_experiment_fields.py  011_add_refresh_tokens.py  0ec3986b88a9_add_achievement_tables.py  5bb3d58eaf67_add_quest_submissions_table.py  (+9 more)
services/core-backend/app/: __init__.py  main.py
services/core-backend/docs/: pg-trgm-retrieval-guide.md  prompt-registry-guide.md  tool-service-guide.md  v0.1.0-database-foundation.md
services/core-backend/scripts/: create_admin_user.py  import_prompts.py  quest_submit_smoke.py  rbac_smoke_test.py  reset_admin_password.py  scope_smoke_test.py  seed_db.py  vectorize_data.py
services/core-backend/tests/: __init__.py  conftest.py  test_api_sites.py  test_tools_integration.py
services/worker/: README.md  pyproject.toml
services/worker/app/: __init__.py  celery_app.py  config.py
(+315 files in other folders)
